# pymatgen-analysis-diffusion

./: .buildinfo  .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  COPYRIGHT  MANIFEST.in  README.md  README.rst  circle.yml  fabfile.py  genindex.html  index.html  modules.html  nose.cfg  objects.inv  py-modindex.html  pylintrc  pymatgen_diffusion.aimd.html  pymatgen_diffusion.aimd.tests.html  pymatgen_diffusion.html  pymatgen_diffusion.neb.html  pyproject.toml  requirements-ci.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: linting.yml  test.yml  testing.yml
_modules/: index.html
_sources/: index.rst.txt  index.txt  pymatgen_diffusion.aimd.txt
_themes/: README.html
docs/: Makefile  change_log.html  conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  pymatgen.analysis.diffusion.aimd.clustering.html  pymatgen.analysis.diffusion.aimd.html  pymatgen.analysis.diffusion.aimd.pathway.html  pymatgen.analysis.diffusion.aimd.rdf.html  pymatgen.analysis.diffusion.aimd.tests.test_clustering.html  pymatgen.analysis.diffusion.aimd.tests.test_pathway.html  pymatgen.analysis.diffusion.aimd.tests.test_rdf.html  pymatgen.analysis.diffusion.aimd.tests.test_van_hove.html  pymatgen.analysis.diffusion.aimd.van_hove.html  pymatgen.analysis.diffusion.analyzer.html  pymatgen.analysis.diffusion.html  pymatgen.analysis.diffusion.neb.full_path_mapper.html  pymatgen.analysis.diffusion.neb.html  pymatgen.analysis.diffusion.neb.io.html  pymatgen.analysis.diffusion.neb.pathfinder.html  pymatgen.analysis.diffusion.neb.periodic_dijkstra.html  pymatgen.analysis.diffusion.neb.tests.test_full_path_mapper.html  pymatgen.analysis.diffusion.neb.tests.test_io.html  pymatgen.analysis.diffusion.neb.tests.test_pathfinder.html  pymatgen.analysis.diffusion.tests.test_analyzer.html  pymatgen.analysis.diffusion.tests.test_pathfinder.html  pymatgen.analysis.diffusion.utils.edge_data_from_sc.html  pymatgen.analysis.diffusion.utils.html  pymatgen.analysis.diffusion.utils.maggma.html  pymatgen.analysis.diffusion.utils.parse_entries.html  pymatgen.analysis.diffusion.utils.supercells.html  pymatgen.analysis.diffusion.utils.tests.test_edge_data_from_sc.html  pymatgen.analysis.diffusion.utils.tests.test_maggma.html  pymatgen.analysis.diffusion.utils.tests.test_parse_entries.html  pymatgen.analysis.html  (+9 more)
docs/_modules/: index.html
docs/_sources/: change_log.rst.txt  pymatgen.analysis.diffusion.aimd.clustering.rst.txt  pymatgen.analysis.diffusion.aimd.rdf.rst.txt  pymatgen.analysis.diffusion.aimd.rst.txt  pymatgen.analysis.diffusion.aimd.tests.test_pathway.rst.txt  pymatgen.analysis.diffusion.aimd.tests.test_van_hove.rst.txt  pymatgen.analysis.diffusion.aimd.van_hove.rst.txt  pymatgen.analysis.diffusion.analyzer.rst.txt  pymatgen.analysis.diffusion.neb.full_path_mapper.rst.txt  pymatgen.analysis.diffusion.neb.io.rst.txt  pymatgen.analysis.diffusion.neb.periodic_dijkstra.rst.txt  pymatgen.analysis.diffusion.neb.rst.txt  pymatgen.analysis.diffusion.rst.txt  pymatgen.analysis.diffusion.tests.test_pathfinder.rst.txt  pymatgen.analysis.diffusion.utils.maggma.rst.txt  pymatgen.analysis.diffusion.utils.parse_entries.rst.txt  pymatgen.analysis.diffusion.utils.rst.txt  pymatgen.analysis.diffusion.utils.supercells.rst.txt  pymatgen.analysis.diffusion.utils.tests.test_parse_entries.rst.txt  pymatgen.analysis.rst.txt  pymatgen.rst.txt  pymatgen_diffusion.aimd.rst.txt  pymatgen_diffusion.neb.rst.txt  pymatgen_diffusion.rst.txt
docs/_static/: documentation_options.js
docs/_themes/: README.html
docs/doctrees/: change_log.doctree  environment.pickle  index.doctree  modules.doctree  pymatgen.analysis.diffusion.aimd.clustering.doctree  pymatgen.analysis.diffusion.aimd.doctree  pymatgen.analysis.diffusion.aimd.pathway.doctree  pymatgen.analysis.diffusion.aimd.rdf.doctree  pymatgen.analysis.diffusion.aimd.tests.test_clustering.doctree  pymatgen.analysis.diffusion.aimd.tests.test_pathway.doctree  pymatgen.analysis.diffusion.aimd.tests.test_rdf.doctree  pymatgen.analysis.diffusion.aimd.tests.test_van_hove.doctree  pymatgen.analysis.diffusion.aimd.van_hove.doctree  pymatgen.analysis.diffusion.analyzer.doctree  pymatgen.analysis.diffusion.doctree  pymatgen.analysis.diffusion.neb.doctree  pymatgen.analysis.diffusion.neb.full_path_mapper.doctree  pymatgen.analysis.diffusion.neb.io.doctree  pymatgen.analysis.diffusion.neb.pathfinder.doctree  pymatgen.analysis.diffusion.neb.periodic_dijkstra.doctree  pymatgen.analysis.diffusion.neb.tests.test_full_path_mapper.doctree  pymatgen.analysis.diffusion.neb.tests.test_io.doctree  pymatgen.analysis.diffusion.neb.tests.test_pathfinder.doctree  (+15 more)
docs_rst/: Makefile  change_log.rst  conf.py  modules.rst  pymatgen.analysis.diffusion.aimd.pathway.rst  pymatgen.analysis.diffusion.aimd.rdf.rst  pymatgen.analysis.diffusion.aimd.tests.test_clustering.rst  pymatgen.analysis.diffusion.aimd.tests.test_rdf.rst  pymatgen.analysis.diffusion.aimd.van_hove.rst  pymatgen.analysis.diffusion.analyzer.rst  pymatgen.analysis.diffusion.neb.io.rst  pymatgen.analysis.diffusion.neb.pathfinder.rst  pymatgen.analysis.diffusion.neb.periodic_dijkstra.rst  pymatgen.analysis.diffusion.neb.tests.test_full_path_mapper.rst  pymatgen.analysis.diffusion.neb.tests.test_io.rst  pymatgen.analysis.diffusion.neb.tests.test_pathfinder.rst  pymatgen.analysis.diffusion.tests.test_analyzer.rst  pymatgen.analysis.diffusion.utils.edge_data_from_sc.rst  pymatgen.analysis.diffusion.utils.maggma.rst  pymatgen.analysis.diffusion.utils.rst  pymatgen.analysis.diffusion.utils.supercells.rst  pymatgen.analysis.diffusion.utils.tests.test_edge_data_from_sc.rst  pymatgen.analysis.diffusion.utils.tests.test_maggma.rst  pymatgen.analysis.rst  pymatgen_diffusion.neb.rst
examples/: CHGCAR_new.vasp  CHGCAR_new2.vasp  neb_idpp_solver.ipynb  neb_path_mapping.ipynb  probability_analysis.ipynb  radial_distribution_function.ipynb  van_hove.ipynb
pymatgen_diffusion/: __init__.py
(+184 files in other folders)
